Closed
Bug 1704992
Opened 5 years ago
Closed 5 years ago
AnnotateCrashReport doc says "may only be called from the main thread in a content process", is it still correct?
Categories
(Toolkit :: Crash Reporting, defect)
Toolkit
Crash Reporting
Tracking
()
RESOLVED
FIXED
90 Branch
| Tracking | Status | |
|---|---|---|
| firefox90 | --- | fixed |
People
(Reporter: mozbugz, Assigned: gsvelto)
References
Details
Attachments
(1 file)
bug 1614933 removed the check that AnnotateCrashReport is only called from the main thread in content processes.
Since there is a mutex in the function, this gives the impression that it could now be called from anywhere.
However the documentation above the function declaration still says:
// AnnotateCrashReport, RemoveCrashReportAnnotation and
// AppendAppNotesToCrashReport may be called from any thread in a chrome
// process, but may only be called from the main thread in a content process.
I'm guessing the documentation should be updated to remove the restriction. Unless it's still correct, in which case I think the assertion should be re-added to catch misuses.
NI:Gabriele, you wrote that patch, what do you think? Thank you.
Flags: needinfo?(gsvelto)
| Assignee | ||
Comment 1•5 years ago
|
||
I forgot to update the comment. Calling those functions is safe in any process and in any thread now.
Flags: needinfo?(gsvelto)
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → gsvelto
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•5 years ago
|
||
Pushed by gsvelto@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d33df94d95ee
Update the comment about crash annotations to reflect the current state of things r=gerald DONTBUILD
Comment 4•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox90:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•