Bug 1704992 - Update the comment about crash annotations to reflect the current state of things r=gerald DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D112521